# RemoteDS

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md
lib/LibDS/: LibDS.pri
lib/LibDS/examples/ConsoleDS/src/: main.c
lib/LibDS/examples/SimpleDS/src/: Window.cpp  Window.h  main.cpp
lib/LibDS/include/: DS_Client.h  DS_Config.h  DS_DefaultProtocols.h
lib/LibDS/src/: client.c  config.c  protocols.c  utils.c
lib/LibDS/src/protocols/: frc_2018.c  frc_2019.c
lib/LibDS/wrappers/Qt/: DriverStation.cpp  DriverStation.h
src/: main.cpp
tests/: CMakeLists.txt
